flux/apps/ext/netbird-dashboard/httproute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-middleware-chain
  namespace: netbird
spec:
  chain:
    middlewares:
      - name: authelia-auth
        namespace: traefik-ext
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbird-dashboard
  namespace: netbird
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-ext
  hostnames:
    - "netbird.fingol.pro"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: netbird-dashboard
          port: 80
    - backendRefs:
        - name: netbird-relay
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /relay
    - backendRefs:
        - name: netbird-management
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /management.ManagementService/
    - backendRefs:
        - name: netbird-signal
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /signalexchange.SignalExchange/
